src/test/deca/syntax/invalid/mul_string_void.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      droite de l'opérateur * avec un string à gauche).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    int y="bonjour" *;
    print(y);
}